# mde4cpp-api-and-dashboard

./: .gitignore  App.cpp  CMakeLists.txt  Main.cpp  README.md  conanfile.txt  libraryModel_ecoreApi.cpp  libraryModel_ecoreApi.hpp  main.cpp  script.ps1
api/: GenericApi.cpp  GenericApi.hpp  ModelApi.cpp  ModelApi.hpp  libraryModel_genericApi.cpp  libraryModel_genericApi.hpp  libraryModel_mixedApi.cpp  libraryModel_mixedApi.hpp  libraryModel_modelApi.cpp  libraryModel_modelApi.hpp
controller/: TestController.h
include/ecore/: EcoreModelPlugin.hpp  MDE4CPPPlugin.hpp  ecorePackage.hpp
include/libraryModel_ecore/: Author.hpp  Book.hpp  LibraryModel.hpp  NamedElement.hpp  Picture.hpp  libraryModel_ecore.hpp  libraryModel_ecoreFactory.hpp  libraryModel_ecorePackage.hpp  libraryModel_ecorePlugin.hpp
include/libraryModel_ecore/impl/: AuthorImpl.hpp  BookImpl.hpp  LibraryModelImpl.hpp  NamedElementImpl.hpp  PictureImpl.hpp  libraryModel_ecoreFactoryImpl.hpp  libraryModel_ecorePackageImpl.hpp  libraryModel_ecorePluginImpl.hpp
include/pluginFramework/: EcoreModelPlugin.hpp
templates/: spec.js
